--- a/swop/swop.csproj
+++ b/swop/swop.csproj
@@ -8,4 +8,8 @@
     <GenerateDocumentationFile>False</GenerateDocumentationFile>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Stack\ApplicationLayer\" />
+  </ItemGroup>
+
 </Project>
