working on custody api

--- a/swop/swop.csproj
+++ b/swop/swop.csproj
@@ -8,4 +8,8 @@
     <GenerateDocumentationFile>False</GenerateDocumentationFile>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\API\API.csproj" />
+  </ItemGroup>
+
 </Project>
